--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,5 +1,12 @@
 FROM php:8.0-fpm-alpine
 
+RUN apk update && apk add autoconf g++ make \
+    && pecl install xdebug \
+    && rm -rf /tmp/pear \
+    && docker-php-ext-enable xdebug
+
 RUN mv $PHP_INI_DIR/php.ini-development $PHP_INI_DIR/php.ini
+
+COPY php/conf.d /usr/local/ect/php/conf.d
 
 WORKDIR /app
