--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     build:
       context: ./docker/php-cli
       dockerfile: Dockerfile
+    environment:
+      APP_DEBUG: 1
+      PHP_IDE_CONFIG: serverName=API
     volumes:
       - '.:/app'
   php-fpm:
