--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "laminas/laminas-httphandlerrunner": "^2.1",
         "aura/router": "^3.2",
         "psr/http-server-handler": "^1.0",
-        "psr/http-server-middleware": "^1.0"
+        "psr/http-server-middleware": "^1.0",
+      "ext-mbstring": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
